--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -105,42 +105,42 @@
                                                       value="createdAt:dsc"
                                                       @change="sortMediaItems">
                                                 {% block sw_media_index_single_select_sort_createdAt_asc %}
-                                                    <option slot="options"
+                                                    <option
                                                             value="createdAt:asc">
                                                         {{ $tc('sw-media.index.labelSortByCreatedAsc') }}
                                                     </option>
                                                 {% endblock %}
 
                                                 {% block sw_media_index_single_select_sort_createdAt_dsc %}
-                                                    <option slot="options"
+                                                    <option
                                                             value="createdAt:dsc" selected>
                                                         {{ $tc('sw-media.index.labelSortByCreatedDsc') }}
                                                     </option>
                                                 {% endblock %}
 
                                                 {% block sw_media_index_single_select_sort_name_asc %}
-                                                    <option slot="options"
+                                                    <option
                                                             value="fileName:asc">
                                                         {{ $tc('sw-media.index.labelSortByNameAsc') }}
                                                     </option>
                                                 {% endblock %}
 
                                                 {% block sw_media_index_single_select_sort_name_dsc %}
-                                                    <option slot="options"
+                                                    <option
                                                             value="fileName:dsc">
                                                         {{ $tc('sw-media.index.labelSortByNameDsc') }}
                                                     </option>
                                                 {% endblock %}
 
                                                 {% block sw_media_index_single_select_sort_fileSize_asc %}
-                                                    <option slot="options"
+                                                    <option
                                                             value="fileSize:asc">
                                                         {{ $tc('sw-media.index.labelSortBySizeAsc') }}
                                                     </option>
                                                 {% endblock %}
 
                                                 {% block sw_media_index_single_select_sort_fileSize_dsc %}
-                                                    <option slot="options"
+                                                    <option
                                                             value="fileSize:dsc">
                                                         {{ $tc('sw-media.index.labelSortBySizeDsc') }}
                                                     </option>
