--- a/Resources/administration/src/module/sw-customer/component/sw-customer-address-form/sw-customer-address-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-address-form/sw-customer-address-form.html.twig
@@ -88,7 +88,7 @@
                               validation="required"
                               v-model="address.countryId">
                         {% block sw_customer_address_form_country_field_options %}
-                            <option slot="options" v-for="country in countries" :key="country.id" :value="country.id">
+                            <option v-for="country in countries" :key="country.id" :value="country.id">
                                 {{ country.name }}
                             </option>
                         {% endblock %}
