--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.html.twig
@@ -50,7 +50,7 @@
                     {% endblock %}
 
                     {% block sw_settings_snippet_list_grid %}
-                        <sw-grid v-if="total"
+                        <sw-grid v-if="grid"
                                  :items="grid"
                                  :isFullpage="true"
                                  :sidebar="true"
@@ -193,6 +193,10 @@
                                     {% endblock %}
                                 </template>
 
+                                <template slot="empty">
+                                    <sw-empty-state :title="$tc('sw-settings-snippet.list.emptyStateHeadLine')"></sw-empty-state>
+                                </template>
+
                                 <template slot="pagination">
                                     {% block sw_settings_snippet_list_grid_pagination %}
                                         <sw-pagination :page="page"
@@ -204,44 +208,16 @@
                                     {% endblock %}
                                 </template>
 
-                                {% block sw_settings_snippet_list_grid_sidebar %}
-                                    <sw-sidebar slot="sidebar">
-                                        {% block sw_settings_snippet_list_grid_sidebar_refresh %}
-                                            <sw-sidebar-item
-                                                    icon="default-arrow-360-left"
-                                                    :title="$tc('sw-settings-snippet.list.titleSidebarItemRefresh')"
-                                                    @click="getList">
-                                            </sw-sidebar-item>
-                                        {% endblock %}
-
-                                        {% block sw_settings_snippet_list_grid_sidebar_custom_snippets %}
-                                            <sw-sidebar-item
-                                                    icon="default-action-filter"
-                                                    :title="$tc('sw-settings-snippet.list.titleSidebarCustomItems')">
-                                                <sw-field type="switch"
-                                                          class="sidebar__custom-snippet-switch"
-                                                          :label="$tc('sw-settings-snippet.list.textSidebarCustomItems')"
-                                                          v-model="isCustomState"
-                                                          @change="onChangeCustomItems">
-                                                </sw-field>
-                                            </sw-sidebar-item>
-                                        {% endblock %}
-                                    </sw-sidebar>
-                                {% endblock %}
+                                <template slot="sidebar">
+                                    {% block sw_settings_snippet_list_grid_sidebar %}
+                                        <sw-settings-snippet-sidebar
+                                                @change="onChange"
+                                                :filterItems="filterItems">
+                                        </sw-settings-snippet-sidebar>
+                                    {% endblock %}
+                                </template>
                             {% endblock %}
                         </sw-grid>
-                    {% endblock %}
-
-                    {% block sw_settings_snippet_list_empty_state %}
-                        <sw-empty-state v-else-if="!isLoading && !total" :title="$tc('sw-settings-snippet.list.messageEmpty')">
-                            <sw-button @click="onEmptyClick">
-                                {{ $tc('sw-settings-snippet.list.buttonEmpty') }}
-                            </sw-button>
-                        </sw-empty-state>
-                    {% endblock %}
-
-                    {% block sw_settings_snippet_list_grid_loader %}
-                        <sw-loader v-if="isLoading"></sw-loader>
                     {% endblock %}
                 </div>
             </template>
