--- a/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
@@ -137,6 +137,8 @@
                 :item="errorFiles[0].entity"
                 :additionalErrorCount="errorFiles.length - 1"
                 :defaultOption="getDefaultDuplicateMediaOption()"
+                :saveSelection="getDefaultDuplicateSaveSelection()"
+                @sw-media-modal-duplicate-media-abort="abortDuplicateMedia"
                 @sw-media-modal-duplicate-media-close="cancelDuplicateMedia"
                 @sw-media-modal-duplicate-media-resolve="retryUpload">
             </sw-media-modal-duplicate-media>
