--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -6,6 +6,7 @@
                 <sw-search-bar
                     :placeholder="$tc('sw-media.general.placeholderSearchBar')"
                     :searchType="$tc('sw-media.general.mainMenuItemGeneral')"
+                    :initialSearch="term"
                     @search="this.onSearch">
                 </sw-search-bar>
             </template>
@@ -22,7 +23,7 @@
                             <router-link :to="{ name: 'sw.media.index', params: { folderId: null } }">
                                 <sw-icon class="sw-media-index__navigation-breadcrumb"
                                          name="folder-breadcrumbs-back-to-root"
-                                         size="32px"
+                                         large
                                          multicolor>
                                 </sw-icon>
                             </router-link>
@@ -60,186 +61,34 @@
 
         {% block sw_media_index_language_switch %}
             <sw-language-switch slot="language-switch"
-                                @on-change="onChangeLanguage">
+                                @on-change="reloadList">
             </sw-language-switch>
         {% endblock %}
 
         {% block sw_media_index_page_content %}
             <div slot="content"class="sw-media-index__page-content">
-                {% block sw_media_index_content_container %}
-                    <div class="sw-media-index__content-container">
-                        {% block sw_media_index_content %}
-                            <div class="sw-media-index__content">
-                                {% block sw_media_index_options_container %}
-                                    <div class="sw-media-index__options-container">
-                                        {% block sw_media_index_presentation %}
-                                            <sw-field type="select"
-                                                      name="presentation"
-                                                      :label="$tc('sw-media.index.labelPresentation')"
-                                                      v-model="presentation">
-                                                {% block sw_media_index_presentation_options_small %}
-                                                    <option value="small-preview">
-                                                        {{ $tc('sw-media.index.labelPresentationSmall') }}
-                                                    </option>
-                                                {% endblock %}
-
-                                                {% block sw_media_index_presentation_options_medium %}
-                                                    <option value="medium-preview">
-                                                        {{ $tc('sw-media.index.labelPresentationMedium') }}
-                                                    </option>
-                                                {% endblock %}
-
-                                                {% block sw_media_index_presentation_options_large %}
-                                                    <option value="large-preview">
-                                                        {{ $tc('sw-media.index.labelPresentationLarge') }}
-                                                    </option>
-                                                {% endblock %}
-                                            </sw-field>
-                                        {% endblock %}
-
-                                        {% block sw_media_index_single_select_sort %}
-                                            <sw-field type="select"
-                                                      name="sortType"
-                                                      :label=" $tc('sw-media.index.labelSort')"
-                                                      value="createdAt:dsc"
-                                                      @change="sortMediaItems">
-                                                {% block sw_media_index_single_select_sort_createdAt_asc %}
-                                                    <option
-                                                            value="createdAt:asc">
-                                                        {{ $tc('sw-media.index.labelSortByCreatedAsc') }}
-                                                    </option>
-                                                {% endblock %}
-
-                                                {% block sw_media_index_single_select_sort_createdAt_dsc %}
-                                                    <option
-                                                            value="createdAt:dsc" selected>
-                                                        {{ $tc('sw-media.index.labelSortByCreatedDsc') }}
-                                                    </option>
-                                                {% endblock %}
-
-                                                {% block sw_media_index_single_select_sort_name_asc %}
-                                                    <option
-                                                            value="fileName:asc">
-                                                        {{ $tc('sw-media.index.labelSortByNameAsc') }}
-                                                    </option>
-                                                {% endblock %}
-
-                                                {% block sw_media_index_single_select_sort_name_dsc %}
-                                                    <option
-                                                            value="fileName:dsc">
-                                                        {{ $tc('sw-media.index.labelSortByNameDsc') }}
-                                                    </option>
-                                                {% endblock %}
-
-                                                {% block sw_media_index_single_select_sort_fileSize_asc %}
-                                                    <option
-                                                            value="fileSize:asc">
-                                                        {{ $tc('sw-media.index.labelSortBySizeAsc') }}
-                                                    </option>
-                                                {% endblock %}
-
-                                                {% block sw_media_index_single_select_sort_fileSize_dsc %}
-                                                    <option
-                                                            value="fileSize:dsc">
-                                                        {{ $tc('sw-media.index.labelSortBySizeDsc') }}
-                                                    </option>
-                                                {% endblock %}
-                                            </sw-field>
-                                        {% endblock %}
-
-                                        {% block sw_media_index_create_folder %}
-                                            <sw-button v-if="next1207" class="sw-media-index__create-folder-action" variant="ghost" size="small" @click="createFolder">
-                                                {{ $tc('sw-media.index.buttonCreateFolder') }}
-                                            </sw-button>
-                                        {% endblock %}
-                                    </div>
-                                {% endblock %}
-
-                                {# MEDIA GRID #}
-                                {% block sw_media_index_listing_grid %}
-                                    <div v-if="selectableItems.length > 0 || parentFolder !== null"
-                                         class="sw-media-index__scroll-container"
-                                         @mousedown.left="onMouseDown"
-                                         ref="scrollContainer">
-
-                                        {% block sw_media_index_media_grid %}
-                                            <sw-media-grid
-                                                    class="sw-media-index__media-grid"
-                                                    :presentation="presentation"
-                                                    ref="mediaGrid"
-                                                    @sw-media-grid-selection-clear="clearSelection">
-
-                                                {% block sw_media_index_parent_folder %}
-                                                    <sw-media-folder-item
-                                                        class="sw-media-index__parent-folder"
-                                                        v-if="parentFolder"
-                                                        :item="parentFolder"
-                                                        :showContextMenuButton="false"
-                                                        :editable="false"
-                                                        isParent
-                                                        @sw-media-item-clicked="navigateToFolder">
-                                                    </sw-media-folder-item>
-                                                {% endblock %}
-
-                                                {% block sw_media_index_selectable_items %}
-                                                    <sw-media-entity-mapper
-                                                        v-for="(gridItem, index) in selectableItems"
-                                                        :key="gridItem.entityName + '_' + gridItem.id"
-                                                        :class="['sw-media-grid-item__item--' + index, dragSelectorClass]"
-                                                        :item="gridItem"
-                                                        :selected="showItemSelected(gridItem)"
-                                                        :showSelectionIndicator="isListSelect"
-                                                        :isList="false"
-                                                        @sw-media-media-item-delete="onMediaGridItemsDeleted"
-                                                        @sw-media-folder-item-remove="onMediaFoldersRemoved"
-                                                        @sw-media-folder-item-dissolve="onMediaFoldersDissolved"
-                                                        @sw-media-media-item-moved="onMediaMoved"
-                                                        v-on="mediaItemSelectionHandler">
-                                                        <template v-if="gridItem.entityName === 'media'">
-                                                            <sw-context-menu-item @click="showDetails(gridItem)">
-                                                                {{ $tc('global.sw-media-media-item.labelContextMenuDetail') }}
-                                                            </sw-context-menu-item>
-                                                        </template>
-                                                    </sw-media-entity-mapper>
-                                                {% endblock %}
-                                            </sw-media-grid>
-                                        {% endblock %}
-
-                                        {% block sw_media_index_load_more %}
-                                            <div class="sw-media-index__load-more">
-                                                <sw-loader v-if="isLoadingMore" size="30" slot="load-more"></sw-loader>
-
-                                                <sw-button v-else-if="itemsLeft" @click="onLoadMore">
-                                                    {{ $t('sw-media.index.labelLoadMore', {
-                                                            count: (itemsLeft > limit) ? limit : itemsLeft
-                                                        })
-                                                    }}
-                                                </sw-button>
-                                            </div>
-                                        {% endblock %}
-                                    </div>
-                                {% endblock %}
-
-                                {% block sw_media_index_empty_state %}
-                                    <sw-empty-state
-                                        v-else-if="!isLoading && selectableItems.length === 0"
-                                        class="sw-media-index__empty-state"
-                                        :title="$tc('sw-media.index.messageEmpty')">
-                                    </sw-empty-state>
-                                {% endblock %}
-                            </div>
-                        {% endblock %}
-                    </div>
+                {% block sw_media_index_listing_grid %}
+                    <sw-media-library
+                        class="sw-media-index__media-library"
+                        :folderId="routeFolderId"
+                        :pendingUploads="uploads"
+                        :term="term"
+                        editable
+                        @media-folder-changed="updateRoute"
+                        v-model="selectedItems"
+                        ref="mediaLibrary">
+                    </sw-media-library>
                 {% endblock %}
 
                 {% block sw_media_index_sidebar %}
                     <sw-media-sidebar
                         :items="selectedItems"
-                        :currentFolder="routeFolderId ? currentFolder : null"
-                        @sw-media-sidebar-items-delete="onMediaGridItemsDeleted"
+                        :currentFolderId="routeFolderId"
+                        editable
+                        @sw-media-sidebar-items-delete="reloadList"
                         @sw-media-sidebar-folder-items-dissolved="onMediaFoldersDissolved"
-                        @sw-media-sidebar-items-moved="onMediaMoved"
-                        @sw-media-item-selection-remove="handleMediaGridItemUnselected">
+                        @sw-media-sidebar-items-moved="reloadList"
+                        @sw-media-item-selection-remove="onMediaUnselect">
                     </sw-media-sidebar>
                 {% endblock %}
 
