--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.html.twig
@@ -53,10 +53,11 @@
                             v-for="mediaItem in items"
                             :key="mediaItem.id"
                             :item="mediaItem"
-                            :selected="false"
+                            :selected="true"
                             :isList="true"
                             :showContextMenuButton="false"
-                            :showSelectionIndicator="false">
+                            :showSelectionIndicator="true"
+                            @sw-media-item-selection-remove="onRemoveItemFromSelection">
                         </sw-media-entity-mapper>
                     </template>
                 {% endblock %}
