Remove highlighting of name for selected items

--- a/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
@@ -10,11 +10,7 @@
                  @click="onClickedItem">
 
                 {% block sw_media_base_item_selection_indicator_icon %}
-                    <sw-icon
-                        v-if="listSelected"
-                        size="16px"
-                        name="small-default-checkmark-line-small">
-                    </sw-icon>
+                    <sw-icon v-if="listSelected" small name="small-default-checkmark-line-small"></sw-icon>
                 {% endblock %}
             </div>
         {% endblock %}
@@ -75,19 +71,17 @@
             </sw-context-button>
         {% endblock %}
 
-        <div v-if="isList && showSelectionIndicator"
-             class="sw-media-base-item__selected-indicator"
-             :class="selectionIndicatorClasses"
-             @click="onClickedItem">
+        {% block sw_media_base_item_list_selected_indicator %}
+            <div v-if="isList && showSelectionIndicator"
+                 class="sw-media-base-item__selected-indicator"
+                 :class="selectionIndicatorClasses"
+                 @click="onClickedItem">
 
-            {% block sw_media_base_item_selection_indicator_icon %}
-                <sw-icon
-                        v-if="listSelected"
-                        size="16px"
-                        name="small-default-checkmark-line-small">
-                </sw-icon>
-            {% endblock %}
-        </div>
+                {% block sw_media_base_item_selection_indicator_icon %}
+                    <sw-icon v-if="listSelected" small name="small-default-checkmark-line-small"></sw-icon>
+                {% endblock %}
+            </div>
+        {% endblock %}
 
         {% block sw_media_base_item_loading_indicator %}
             <sw-icon
